--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com</groupId>
-  <artifactId>mywebproj</artifactId>
+  <artifactId>murali</artifactId>
   <packaging>war</packaging>
   <version>1</version>
-  <name>mywebproj Maven Webapp</name>
+  <name>murali Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>mywebproj</finalName>
+    <finalName>murali</finalName>
   </build>
 </project>
